[gd_scene load_steps=6 format=3 uid="uid://kfme1qgmaabk"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_x5os3"]
[ext_resource type="Script" path="res://scripts/UI.gd" id="2_4xads"]
[ext_resource type="Script" path="res://scripts/crosshair.gd" id="3_g5gal"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_e7mdd"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1xd1u"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.11082, 0)
collision_mask = 6
script = ExtResource("1_x5os3")
bulletInitialV = 250.0
bulletsPerShot = 50
bulletGravity = 0.0
bulletBounces = 50

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_e7mdd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D2"]
mesh = SubResource("CapsuleMesh_1xd1u")

[node name="Camera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.586979, -0.0906709)

[node name="BulletSpawn" type="Node3D" parent="Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.288238, -0.096998, -1.09947)

[node name="RightCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0.75, 0, 0)
collision_mask = 2

[node name="LeftCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(-0.75, 0, 0)
collision_mask = 2

[node name="FrontCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 0, -0.75)
collision_mask = 2

[node name="BackCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
target_position = Vector3(0, 0, 0.75)
collision_mask = 2

[node name="RightCast2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0.75, 0, 0)
collision_mask = 2

[node name="LeftCast2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(-0.75, 0, 0)
collision_mask = 2

[node name="FrontCast2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, -0.75)
collision_mask = 2

[node name="BackCast2" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 0, 0.75)
collision_mask = 2

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4xads")

[node name="Speed" type="Label" parent="UI"]
layout_mode = 1
offset_right = 124.0
offset_bottom = 58.0

[node name="Ammo" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -106.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 50

[node name="Health" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -115.0
offset_right = 229.0
grow_vertical = 0
theme_override_font_sizes/font_size = 50

[node name="Crosshair" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -0.0299988
offset_bottom = 0.0299988
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_g5gal")

[node name="Top" type="Line2D" parent="UI/Crosshair"]
points = PackedVector2Array(0, -5, 0, -15)
width = 2.0

[node name="Bottom" type="Line2D" parent="UI/Crosshair"]
points = PackedVector2Array(0, 5, 0, 15)
width = 2.0

[node name="Left" type="Line2D" parent="UI/Crosshair"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 2.0

[node name="Right" type="Line2D" parent="UI/Crosshair"]
points = PackedVector2Array(5, 0, 15, 0)
width = 2.0

[node name="SlideCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.997899, 0)
target_position = Vector3(0, 0, 1)
